# RixinSDL

./: CMakeLists.txt
include/: DrawManager.h  RixinSDL.h
src/: DrawHelper.cpp  DrawManager.cpp  RixinSDL.cpp
